--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,89 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+body {
+  background: #224231;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.cal {
+  margin-top: 150px;
+  margin-left: 375px;
+  display: flex;
+  flex-direction: column;
+  height: 350px;
+  border: 3px solid #fff;
+  width: 40%;
+  padding: 5px;
+  background: #f9c80e;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cal input[type='text'] {
+  height: 20%;
+  text-align: right;
+  font-weight:lighter;
+  font-family: 'Times New Roman', Times, serif;
+  color: #000;
+  font-size: 50px;
+  border: 2px solid #afc5a0;
+  border-radius: 4px;
+}
+
+.keypad {
+  margin-top: 10px;
+  width: 98%;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #ff2342;
+  padding: 0px 3px;
+  padding-bottom: 2px; 
+  height: 75%;
+  background: #040f0f;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  height: 16%;
+  margin-top: 2px;
+}
+
+.btn {
+  width: 20%;
+  height: 100%;
+  margin-left: 2px;
+  font-size: large;
+  font-weight: bold; 
+  border-radius: 10px;
+  border: 2px solid #ff6663;
+  box-sizing: border-box;
+}
+
+
+.btn-f {
+  width: 20%;
+  height: 100%;
+  margin-left: 2px;
+  font-size: large;
+  font-weight: bold; 
+  border-radius: 10px;
+  border: 2px solid #fff;
+  background: #75b9be;
+  box-sizing: border-box;
+  color: #fff;
+}
+
+.btn-k {
+  width: 20%;
+  color: #fff;
+  height: 100%;
+  margin-left: 2px;
+  font-size: large;
+  font-weight: bold; 
+  border-radius: 10px;
+  background: #f9c80e;
+  border: 2px solid #fff;
+  box-sizing: border-box;
 }
